# sitemap_grabber

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap_grabber.py
.github/workflows/: ci.yml  mkdocs-gh-deploy.yml  publish.yml
docs/: api.md
sitemap_grabber/: __init__.py  sitemap_grabber.py  well_known_files.py
src/: __init__.py  sitemap_grabber.py
src/sitemap_grabber/: __init__.py  sitemap_grabber.py
tests/: test_fetch_url.py  test_get_url.py  test_sitemap_grabber.py  test_well_known_files.py
