[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sitemap_grabber"
authors = [{name = "SimpleCTO", email = "github+sitemap_grabber@simplecto.com"}]
license = {file = "LICENSE"}
version = "0.1.8"
description = "A simple sitemap grabber"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "requests",
  "fake-useragent",
  "defusedxml",
  "brotli",
  "curl_cffi"
]

[project.urls]
Home = "https://simplecto.com"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]
