[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sitemap_grabber"
authors = [{name = "SimpleCTO", email = "github+sitemap_grabber@simplecto.com"}]
license = {file = "LICENSE"}
version = "0.1.10"
description = "A simple sitemap grabber"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "requests >= 2.32.3",
  "fake-useragent >= 1.5.1",
  "defusedxml >= 0.7.1",
  "brotli >= 1.1.0",
  "curl_cffi >= 0.7.1"
]

[project.urls]
Home = "https://github.com/simplecto/sitemap_grabber"

[tool.ruff]
line-length = 120
target-version = "py312"


[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
ignore = [
    "ANN101",
    "E501",
    "D203",
    "D213",
    "D100",
    "COM812"
]
select = ["ALL", "W2", "I", "B"]
exclude = [
    "pyproject.toml",
    "tests/*",
    ".idea/**",
]
